Modify configuration return format and status logic. Add duplicate name check. zk installation directory adjustment.

--- a/doc/backend/配置管理.md
+++ b/doc/backend/配置管理.md
@@ -40,11 +40,7 @@ Content-Type:application/json
 {
   "name": "my config frontend",
   "typ": "frontend",
-  "conf": {
-    "frontend": {
-      "escProxyPort": 8888
-    }
-  },
+  "escProxyPort": 8888,
   "remark": "备注"
 }
 ```
@@ -55,11 +51,7 @@ Content-Type:application/json
 {
   "name": "my config backend",
   "typ": "backend",
-  "conf": {
-    "backend": {
-      "serverPort": 12345
-    }
-  },
+  "serverPort": 12345,
   "remark": "备注"
 }
 ```
@@ -70,18 +62,15 @@ Content-Type:application/json
 {
   "name": "my config alert",
   "typ": "alert",
-  "conf": {
-    "alert": {
-      "alertType": "mail",
-      "mailSender": "你的邮箱",
-      "mailUser": "你的邮箱",
-      "mailPasswd": "你的密码",
-      "mailServerHost": "smtp.163.com",
-      "mailServerPort": 25,
-      "mailSmtpSslEnable": false,
-      "mailSmtpStarttlsEnable": false
-    }
-  },
+  "alertType": "mail",
+  "mailProtocol": "SMTP",
+  "mailSender": "你的邮箱",
+  "mailUser": "你的邮箱",
+  "mailPasswd": "你的密码",
+  "mailServerHost": "smtp.163.com",
+  "mailServerPort": 25,
+  "mailSmtpSslEnable": false,
+  "mailSmtpStarttlsEnable": false,
   "remark": "备注"
 }
 ```
@@ -89,7 +78,7 @@ Content-Type:application/json
 ### 请求body  alert逻辑 weixin
 
 ```json
-//TODO 后面再写
+第一个版本不做了
 ```
 
 ### 请求body  master逻辑
@@ -98,11 +87,7 @@ Content-Type:application/json
 {
   "name": "my config master",
   "typ": "master",
-  "conf": {
-    "master": {
-      "masterReservedMemory": 0.5
-    }
-  },
+  "masterReservedMemory": 0.5,
   "remark": "备注"
 }
 ```
@@ -113,11 +98,7 @@ Content-Type:application/json
 {
   "name": "my config worker",
   "typ": "worker",
-  "conf": {
-    "worker": {
-      "workerReservedMemory": 0.5
-    }
-  },
+  "workerReservedMemory": 0.5,
   "remark": "备注"
 }
 ```
@@ -128,12 +109,10 @@ Content-Type:application/json
 {
   "name": "my config 1",
   "typ": "database",
-  "conf": {
-    "databaseType": "mysql",
-    "databaseName": "dolphinscheduler",
-    "account": "easy",
-    "password": "easy"
-  },
+  "databaseType": "mysql",
+  "databaseName": "dolphinscheduler",
+  "account": "easy",
+  "password": "easy",
   "remark": "备注"
 }
 ```
@@ -144,11 +123,7 @@ Content-Type:application/json
 {
   "name": "my config hadoop",
   "typ": "hadoop",
-  "conf": {
-    "hadoop": {
-      "fsDefaultFS": "file:///home/easy/ds/backend/dolphinscheduler_resource"
-    }
-  },
+  "fsDefaultFS": "file:///home/easy/ds/backend/dolphinscheduler_resource",
   "remark": "备注"
 }
 ```
@@ -159,11 +134,7 @@ Content-Type:application/json
 {
   "name": "my config common",
   "typ": "common",
-  "conf": {
-    "common": {
-      "dataStore2hdfsBasepath": "file:///home/easy/ds/backend/dolphinscheduler_resource"
-    }
-  },
+  "dataStore2hdfsBasepath": "file:///home/easy/ds/backend/dolphinscheduler_resource",
   "remark": "备注"
 }
 ```
