--- a/doc/backend/集群管理.md
+++ b/doc/backend/集群管理.md
@@ -13,9 +13,11 @@
 执行的同时后端会提供一个分页查看日志的接口，前端可以定时调用分页接口，以在页面显示字幕滚动的效果。　
 
 页面布局:  
+
 页面分为两部分,左侧为列表部分,右侧为编辑部分
 
 流程简述:   
+
 - 初始化流程  
   如果已经有集群在启动,左侧列表会为已经启动的集群标上一个绿灯标志,右侧编辑部分则直接显示该集群的内容;  
   如果没有,左侧不显示绿灯,右侧显示空白;  
@@ -26,6 +28,36 @@
   1 如果用户在编辑其他集群,此时再点创建集群要提醒用户是否保存还是放弃;  
   2 用户在没有保存集群之前,启动/停止/部署按钮均不可操作,只有在保存了才可以操作;  
   3 删除集群需要给用户二段确认,防止误删.并且已经在启动的集群不允许删除,这块逻辑后端有写,直接调用会返回错误;  
+
+集群有如下状态:
+
+- 启动成功 startsuccess
+- 启动失败 startfailure
+- 停止成功 stopsuccess
+- 停止失败 stopfailure
+- 部署成功 deploysuccess
+- 部署失败 deployfailure
+- 准备     prepare
+- 取消     cancel
+
+状态流程解释:
+
+- 创建成功后的集群是 准备(prepare) 状态;
+- 部署集群成功后状态为 部署成功 (deploysuccess) 如果此时想编辑集群,请点击取消按钮,状态会变为取消 (cancel);
+- 点击取消按钮相跟编辑最后的确认流程差不多,前端只是将整个大json中的状态修改成取消并一起传过来;
+- 只有在 取消(cancel) 或 停止成功(stopsuccess) 或 部署失败 (deployfailure) 状态下,集群才能进行编辑, 编辑成功会将状态改为准备(prepare);
+- 只有在 准备(prepare) 或 停止成功(stopsuccess) 或 部署失败 (deployfailure) 状态下才可以执行部署集群;
+
+状态权限解释:
+
+- 准备 (prepare) 状态下,只能进行部署集群 或 删除集群;
+- 取消 (cancel) 状态下,只能进行编辑集群;
+- 部署成功 (deploysuccess) 状态下,只能进行启动集群 或 停止集群 或 删除集群;
+- 部署失败 (deployfailure) 状态下,只能进行部署集群 或 编辑集群 或 删除集群;
+- 启动成功 (startsuccess) 状态下,只能进行停止集群;
+- 启动失败 (startfailure) 状态下,只能进行启动集群 或 删除集群;
+- 停止成功 (stopsuccess) 状态下,只能进行编辑集群 或 部署集群 或 删除集群;
+- 停止失败 (stopfailure) 状态下,只能进行停止集群;
 
 
 ### 接口介绍
@@ -62,10 +94,7 @@ Content-Type:application/json
 
 ```json
 {
-  "id": "04075add",
   "name": "myTest1",
-  "workStatus": false,
-  "deployStatus": false,
   "hosts": [
     "192.167.8.141"
   ],
@@ -78,9 +107,9 @@ Content-Type:application/json
     {
       "roleName": "database",
       "roleBody": {
-        "account": "easy",
-        "databaseName": "dolphinscheduler",
         "databaseType": "mysql",
+        "databaseName": "dolphinscheduler",
+        "account": "easy",
         "password": "easy"
       },
       "roleDependHost": [
@@ -90,9 +119,7 @@ Content-Type:application/json
     {
       "roleName": "backend",
       "roleBody": {
-        "backend": {
-          "serverPort": 12345
-        }
+        "serverPort": 12345
       },
       "roleDependHost": [
         "192.167.8.141"
@@ -101,9 +128,7 @@ Content-Type:application/json
     {
       "roleName": "frontend",
       "roleBody": {
-        "frontend": {
-          "escProxyPort": 8888
-        }
+        "escProxyPort": 8888
       },
       "roleDependHost": [
         "192.167.8.141"
@@ -112,9 +137,7 @@ Content-Type:application/json
     {
       "roleName": "master",
       "roleBody": {
-        "master": {
-          "masterReservedMemory": 0.5
-        }
+        "masterReservedMemory": 0.5
       },
       "roleDependHost": [
         "192.167.8.141"
@@ -123,9 +146,7 @@ Content-Type:application/json
     {
       "roleName": "worker",
       "roleBody": {
-        "worker": {
-          "workerReservedMemory": 0.5
-        }
+        "workerReservedMemory": 0.5
       },
       "roleDependHost": [
         "192.167.8.141"
@@ -134,16 +155,14 @@ Content-Type:application/json
     {
       "roleName": "alert",
       "roleBody": {
-        "alert": {
-          "alertType": "mail",
-          "mailSender": "邮箱发送人",
-          "mailUser": "邮箱帐号",
-          "mailPasswd": "邮箱密码",
-          "mailServerHost": "smtp.163.com",
-          "mailServerPort": 25,
-          "mailSmtpSslEnable": false,
-          "mailSmtpStarttlsEnable": false
-        }
+        "alertType": "mail",
+        "mailSender": "feloxx@163.com",
+        "mailUser": "feloxx@163.com",
+        "mailPasswd": "Chevalier1!",
+        "mailServerHost": "smtp.1633.com",
+        "mailServerPort": 25,
+        "mailSmtpSslEnable": false,
+        "mailSmtpStarttlsEnable": false
       },
       "roleDependHost": [
         "192.167.8.141"
@@ -151,6 +170,7 @@ Content-Type:application/json
     },
     {
       "roleName": "zookeeper",
+      "roleBody": null,
       "roleDependHost": [
         "192.167.8.141"
       ]
@@ -158,9 +178,7 @@ Content-Type:application/json
     {
       "roleName": "hadoop",
       "roleBody": {
-        "hadoop": {
-          "fsDefaultFS": "file:///home/easy/ds/backend/dolphinscheduler_resource"
-        }
+        "fsDefaultFS": "file:///home/easy/ds/backend/dolphinscheduler_resource"
       },
       "roleDependHost": [
         "192.167.8.141"
@@ -169,9 +187,7 @@ Content-Type:application/json
     {
       "roleName": "common",
       "roleBody": {
-        "common": {
-          "dataStore2hdfsBasepath": "file:///home/easy/ds/backend/dolphinscheduler_resource"
-        }
+        "dataStore2hdfsBasepath": "file:///home/easy/ds/backend/dolphinscheduler_resource"
       },
       "roleDependHost": [
         "192.167.8.141"
@@ -338,10 +354,9 @@ id | string | true | | 集群id
   "code": 200,
   "message": "ok",
   "result": {
-    "id": "894064de",
+    "id": "9df5a945",
     "name": "myTest1",
-    "workStatus": false,
-    "deployStatus": false,
+    "status": "startsuccess",
     "hosts": [
       "192.167.8.141"
     ],
@@ -366,9 +381,7 @@ id | string | true | | 集群id
       {
         "roleName": "backend",
         "roleBody": {
-          "backend": {
-            "serverPort": 12345
-          }
+          "serverPort": 12345
         },
         "roleDependHost": [
           "192.167.8.141"
@@ -377,9 +390,7 @@ id | string | true | | 集群id
       {
         "roleName": "frontend",
         "roleBody": {
-          "frontend": {
-            "escProxyPort": 8888
-          }
+          "escProxyPort": 8888
         },
         "roleDependHost": [
           "192.167.8.141"
@@ -388,9 +399,7 @@ id | string | true | | 集群id
       {
         "roleName": "master",
         "roleBody": {
-          "master": {
-            "masterReservedMemory": 0.5
-          }
+          "masterReservedMemory": 0.5
         },
         "roleDependHost": [
           "192.167.8.141"
@@ -399,9 +408,7 @@ id | string | true | | 集群id
       {
         "roleName": "worker",
         "roleBody": {
-          "worker": {
-            "workerReservedMemory": 0.5
-          }
+          "workerReservedMemory": 0.5
         },
         "roleDependHost": [
           "192.167.8.141"
@@ -410,16 +417,14 @@ id | string | true | | 集群id
       {
         "roleName": "alert",
         "roleBody": {
-          "alert": {
-            "alertType": "mail",
-            "mailPasswd": "邮箱密码",
-            "mailSender": "邮箱发送人",
-            "mailServerHost": "smtp.163.com",
-            "mailServerPort": 25,
-            "mailSmtpSslEnable": false,
-            "mailSmtpStarttlsEnable": false,
-            "mailUser": "邮箱帐号"
-          }
+          "alertType": "mail",
+          "mailPasswd": "邮箱密码",
+          "mailSender": "邮箱",
+          "mailServerHost": "smtp.163.com",
+          "mailServerPort": 25,
+          "mailSmtpSslEnable": false,
+          "mailSmtpStarttlsEnable": false,
+          "mailUser": "发送人"
         },
         "roleDependHost": [
           "192.167.8.141"
@@ -435,9 +440,7 @@ id | string | true | | 集群id
       {
         "roleName": "hadoop",
         "roleBody": {
-          "hadoop": {
-            "fsDefaultFS": "file:///home/easy/ds/backend/dolphinscheduler_resource"
-          }
+          "fsDefaultFS": "file:///home/easy/ds/backend/dolphinscheduler_resource"
         },
         "roleDependHost": [
           "192.167.8.141"
@@ -446,9 +449,7 @@ id | string | true | | 集群id
       {
         "roleName": "common",
         "roleBody": {
-          "common": {
-            "dataStore2hdfsBasepath": "file:///home/easy/ds/backend/dolphinscheduler_resource"
-          }
+          "dataStore2hdfsBasepath": "file:///home/easy/ds/backend/dolphinscheduler_resource"
         },
         "roleDependHost": [
           "192.167.8.141"
@@ -542,10 +543,9 @@ page|int|true| |分页数
     "total": 1,
     "data": [
       {
-        "id": "894064de",
+        "id": "9df5a945",
         "name": "myTest1",
-        "workStatus": false,
-        "deployStatus": false,
+        "status": "deploysuccess",
         "hosts": [
           "192.167.8.141"
         ],
@@ -570,9 +570,7 @@ page|int|true| |分页数
           {
             "roleName": "backend",
             "roleBody": {
-              "backend": {
-                "serverPort": 12345
-              }
+              "serverPort": 12345
             },
             "roleDependHost": [
               "192.167.8.141"
@@ -581,9 +579,7 @@ page|int|true| |分页数
           {
             "roleName": "frontend",
             "roleBody": {
-              "frontend": {
-                "escProxyPort": 8888
-              }
+              "escProxyPort": 8888
             },
             "roleDependHost": [
               "192.167.8.141"
@@ -592,9 +588,7 @@ page|int|true| |分页数
           {
             "roleName": "master",
             "roleBody": {
-              "master": {
-                "masterReservedMemory": 0.5
-              }
+              "masterReservedMemory": 0.5
             },
             "roleDependHost": [
               "192.167.8.141"
@@ -603,9 +597,7 @@ page|int|true| |分页数
           {
             "roleName": "worker",
             "roleBody": {
-              "worker": {
-                "workerReservedMemory": 0.5
-              }
+              "workerReservedMemory": 0.5
             },
             "roleDependHost": [
               "192.167.8.141"
@@ -614,16 +606,14 @@ page|int|true| |分页数
           {
             "roleName": "alert",
             "roleBody": {
-              "alert": {
-                "alertType": "mail",
-                "mailPasswd": "邮箱密码",
-                "mailSender": "邮箱发送人",
-                "mailServerHost": "smtp.163.com",
-                "mailServerPort": 25,
-                "mailSmtpSslEnable": false,
-                "mailSmtpStarttlsEnable": false,
-                "mailUser": "邮箱帐号"
-              }
+              "alertType": "mail",
+              "mailPasswd": "邮箱密码",
+              "mailSender": "邮箱",
+              "mailServerHost": "smtp.163.com",
+              "mailServerPort": 25,
+              "mailSmtpSslEnable": false,
+              "mailSmtpStarttlsEnable": false,
+              "mailUser": "邮箱"
             },
             "roleDependHost": [
               "192.167.8.141"
@@ -639,9 +629,7 @@ page|int|true| |分页数
           {
             "roleName": "hadoop",
             "roleBody": {
-              "hadoop": {
-                "fsDefaultFS": "file:///home/easy/ds/backend/dolphinscheduler_resource"
-              }
+              "fsDefaultFS": "file:///home/easy/ds/backend/dolphinscheduler_resource"
             },
             "roleDependHost": [
               "192.167.8.141"
@@ -650,9 +638,7 @@ page|int|true| |分页数
           {
             "roleName": "common",
             "roleBody": {
-              "common": {
-                "dataStore2hdfsBasepath": "file:///home/easy/ds/backend/dolphinscheduler_resource"
-              }
+              "dataStore2hdfsBasepath": "file:///home/easy/ds/backend/dolphinscheduler_resource"
             },
             "roleDependHost": [
               "192.167.8.141"
